--- a/index.html
+++ b/index.html
@@ -23,9 +23,17 @@
        <fieldset>
         <legend><span class="icon-user"></span> 👤 Personal Information</legend>
 
-        <label><span class="icon-user"></span> 👤 Full Name:
+          <label><span class="icon-user"></span>  👤 First Name:
           <input type="text" name="fullname" required>
-        </label>
+          </label>
+         
+          <label><span class="icon-user"></span> 👤 Middle Name:
+          <input type="text" name="fullname" required>
+          </label>
+         
+          <label><span class="icon-user"></span> 👤 Last Name:
+          <input type="text" name="fullname" required>
+          </label>
 
         <label><span class="icon-company"></span> 🏢 Company/Organization:
           <input type="text" name="company">
